--- a/tapl.cabal
+++ b/tapl.cabal
@@ -11,6 +11,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Language.TAPL.Untyped
+  exposed-modules:     Language.TAPL.Untyped,
+                       Language.TAPL.SimplyTyped
   build-depends:       base ==4.6.*
   hs-source-dirs:      src
